<resources>
    <string name="app_name">Bhaisarjya</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="titlename">Bhaisarjya</string>
    <string name="abou">AboutUs</string>
    <string name="desc">\"The art of medicine \nconsists in amusing the patient\n while nature cures the disease.\"</string>
    <string name="distributor">Distributor:</string>
    <string name="medicine_list">Medicine list:</string>
    <string name="bill_type">Bill Type:</string>
    <string name="confirm">Confirm</string>
    <string name="patient_name">Patient Name:</string>
</resources>
