<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Add Imports"
                    android:textSize="@dimen/title_text_size"
                    android:textColor="@color/white"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="311dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/distributor"
                                android:textSize="@dimen/Paragraph_text_size" />

                            <EditText
                                android:id="@+id/distributor"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/Paragraph_text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/medicine_list"
                                android:textSize="@dimen/Paragraph_text_size" />
                            <androidx.cardview.widget.CardView
                                android:id="@+id/import_medicine_list_card"
                                android:layout_margin="10dp"
                                android:layout_marginLeft="30dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="10dp"
                                android:elevation="3dp"
                                android:padding="10dp">
                                <LinearLayout
                                    android:layout_margin="10dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="Name:"
                                            android:textSize="@dimen/Paragraph_text_size" />

                                        <EditText
                                            android:textSize="@dimen/Paragraph_text_size"
                                            android:id="@+id/import_med_name"
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content" />

                                        <Button
                                            android:layout_marginLeft="20dp"
                                            android:id="@+id/remove_med_from_list"
                                            android:layout_width="20dp"
                                            android:layout_height="20dp"
                                            android:background="@drawable/ic_close"
                                            android:backgroundTint="@color/colorPrimary"/>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="MRP-Rate:"
                                            android:textSize="@dimen/Paragraph_text_size" />

                                        <EditText
                                            android:inputType="numberDecimal"
                                            android:textSize="@dimen/Paragraph_text_size"
                                            android:id="@+id/mrp_med_import"
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"/>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="Quantity:"
                                            android:textSize="@dimen/Paragraph_text_size" />

                                        <EditText
                                            android:inputType="number"
                                            android:textSize="@dimen/Paragraph_text_size"
                                            android:id="@+id/quantity_med_import"
                                            android:layout_width="50dp"
                                            android:layout_height="wrap_content"/>
                                    </LinearLayout>
                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="Expiry date:"
                                            android:textSize="@dimen/Paragraph_text_size" />

                                        <EditText
                                            android:maxLength="4"
                                            android:inputType="number"
                                            android:textSize="@dimen/Paragraph_text_size"
                                            android:id="@+id/expiry_year_med_import"
                                            android:layout_marginLeft="10dp"
                                            android:hint="YYYY"
                                            android:textAlignment="center"
                                            android:layout_width="50dp"
                                            android:layout_height="wrap_content"/>
                                        <EditText
                                            android:maxLength="2"
                                            android:inputType="number"
                                            android:textSize="@dimen/Paragraph_text_size"
                                            android:id="@+id/expiry_month_med_import"
                                            android:hint="MM"
                                            android:layout_width="30dp"
                                            android:layout_height="wrap_content"/>
                                        <EditText
                                            android:maxLength="2"
                                            android:inputType="number"
                                            android:hint="DD"
                                            android:textSize="@dimen/Paragraph_text_size"
                                            android:id="@+id/expiry_day_med_import"
                                            android:layout_width="25dp"
                                            android:layout_height="wrap_content"/>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="Amount:"
                                            android:textSize="@dimen/Paragraph_text_size" />

                                        <TextView
                                            android:layout_marginLeft="20dp"
                                            android:textColor="@color/colorAccent"
                                            android:id="@+id/amount_med_import"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textSize="@dimen/Paragraph_text_size"
                                            tools:text="2000"/>
                                        <Button
                                            android:id="@+id/add_import_medicine_list"
                                            android:layout_marginLeft="50dp"
                                            android:layout_width="20dp"
                                            android:layout_height="20dp"
                                            android:background="@drawable/ic_add"
                                            android:backgroundTint="@color/colorPrimary"/>
                                    </LinearLayout>
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bill_type"
                                android:textSize="@dimen/Paragraph_text_size" />

                            <AutoCompleteTextView
                                android:id="@+id/billtype"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:hint="bill type"
                                android:textSize="@dimen/Paragraph_text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/confirm"
                                android:textSize="@dimen/Paragraph_text_size" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="50dp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/addimportsbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:backgroundTint="@color/colorPrimary"
                            android:text="Add"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
    </ScrollView>
</LinearLayout>